k8s/coma/apps/matrix/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix
  namespace: matrix
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: artichoke-cc-https
  hostnames:
    - "matrix.artichoke.cc"
  rules:
    - matches:
        - path:
            type: RegularExpression
            value: "^/_matrix/client/.*/(login|logout|refresh)(/.*)?$"
      backendRefs:
        - name: mas-main
          port: 8081

    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: synapse-matrix-synapse
          port: 8008
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: artichoke-wellknown
  namespace: matrix
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: artichoke-cc-root
  hostnames:
    - "artichoke.cc"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/.well-known/matrix/"
      backendRefs:
        - name: synapse-wellknown-lighttpd
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mas
  namespace: matrix
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: artichoke-cc-https
  hostnames:
    - "mas.artichoke.cc"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: mas-main
          port: 8081
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: element
  namespace: matrix
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: artichoke-cc-https
  hostnames:
    - "element.artichoke.cc"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: element
          port: 80
