k8s/coma/apps/matrix/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synapse
  namespace: matrix
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`matrix.artichoke.cc`) && PathRegexp(`^/_matrix/client/(.*)/(login|logout|refresh)`)
      kind: Rule
      services:
        - name: mas-main
          port: 8081

    - match: Host(`matrix.artichoke.cc`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: synapse-matrix-synapse
          port: 8008

    - match: Host(`artichoke.cc`) && PathPrefix(`/.well-known/matrix/`)
      kind: Rule
      services:
        - name: synapse-wellknown-lighttpd
          port: 80

    - match: Host(`mas.artichoke.cc`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: mas-main
          port: 8081

  tls:
    secretName: tls-secret
